<resources>
    <string name="app_name" translatable="false">Simon_Says_app</string>
    <string name="title_activity_game_view" translatable="false">GameViewActivity</string>
    <string name="tries_left" translatable="false">Tries left:</string>
    <string name="current_score">Current Score:</string>
    <string name="firebase_login" translatable="false">Firebase login</string>
    <string name="login_with_google">Login with Google</string>
    <string name="logout">logout</string>
    <string name="usersNickName" translatable="false"></string>
    <string name="choose_nickname">Choose Nickname</string>
    <string name="type_in_your_nickname_and_press_the_above_button">Type in your nickname</string>
    <string name="NickNameStartingText">Hello: </string>
    <string name="UserBestScoreStartingText">Your Best Score: </string>
    <string name="hall_of_fame">Hall Of Fame</string>
    <string name="easy">EASY</string>
    <string name="mid">MID</string>
    <string name="play">Play</string>
    <string name="hard">HARD</string>
    <string name="continue_rsrc">continue</string>
    <string name="info_text" translatable="false">Welcome to Simon Says..\n
    by pressing the PLAY button you may choose on which difficulty to play.\n
        your score is generated by the amount of buttons you have pressed while copy catting the computer.\n
        the higher the difficulty the least amount of time between two buttons pressed by the computer meaning you will have less time to memorize the computer song.\n\n

        ps. dont forget to check the Hall Of Fame! if your score is in the top 10 you might be there.\n

        this app was created by:\n
        Ben Vahaba and Eden Todosi\n
        hope you enjoy it.\n
        for support mail us at:\n
        vahababen@gmail.com</string>
    <string name="your_final_score">Your Final Score</string>/>
</resources>
